panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__preprocessor__test_error_define_of_non_identifier.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/preprocessor/test_error_define_of_non_identifier.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `#define` of non-identifier `+`
   ╭─[panko/tests/cases/preprocessor/test_error_define_of_non_identifier.c:1:9]
   │
 1 │ #define +
   │ ─────── ┬  
   │         ╰── only identifiers can be `#define`d
───╯
